examples/test/testpolicy827.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy827
  namespace: namespace381
spec:
  podSelector:
    matchLabels:
      key30: value22
      key25: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value32
          key22: value30
      podSelector:
        matchLabels:
          key36: value2
